[package]
name = "tiffer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
printpdf = { version = "0.7.0", features = ["embedded_images", "image", "less-optimization"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "blocking", "json"], default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
